Adicionando lógica + estilo

--- a/Fiap.Web.WizardingWonders/Views/Home/Privacy.cshtml
+++ b/Fiap.Web.WizardingWonders/Views/Home/Privacy.cshtml
@@ -1,6 +1,50 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Política de Privacidade";
 }
-<h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<div class="container mt-5">
+    <h1>Política de Privacidade - Escola de Magia e Bruxaria de Hogwarts</h1>
+
+    <p>
+        Na Escola de Magia e Bruxaria de Hogwarts, comprometemo-nos a proteger a privacidade e a confidencialidade de
+        nossos alunos e funcionários mágicos. Esta Política de Privacidade descreve como tratamos as informações
+        pessoais em nosso mundo mágico.
+    </p>
+
+    <h2>Informações Pessoais que Coletamos</h2>
+
+    <p>
+        Ao matricular-se na escola ou trabalhar em Hogwarts, coletamos informações pessoais relevantes para a nossa
+        comunidade mágica, incluindo seu nome, data de nascimento, casa e habilidades mágicas. Também mantemos
+        registros de seu progresso acadêmico e atividades relacionadas à magia.
+    </p>
+
+    <h2>Uso de Poções de Privacidade</h2>
+
+    <p>
+        Para proteger as informações pessoais dos nossos alunos e funcionários, utilizamos poções de privacidade
+        poderosas que garantem que apenas aqueles com autorização adequada possam acessar dados confidenciais.
+        As informações pessoais são usadas exclusivamente para fins educacionais e administrativos em Hogwarts.
+    </p>
+
+    <h2>Compartilhamento de Informações</h2>
+
+    <p>
+        Nós não compartilhamos informações pessoais com o mundo não-mágico ou com qualquer outra instituição.
+        As informações são mantidas estritamente dentro dos limites de Hogwarts e do Ministério da Magia.
+    </p>
+
+    <h2>Alterações na Política</h2>
+
+    <p>
+        Reservamo-nos o direito de modificar esta política de privacidade, mas quaisquer mudanças serão anunciadas
+        no quadro de avisos da escola e nas edições do Profeta Diário.
+    </p>
+
+    <h2>Contato</h2>
+
+    <p>
+        Se você tiver alguma dúvida sobre nossa política de privacidade ou precisar de mais informações,
+        entre em contato com o Diretor de Hogwarts ou envie uma carta para a escola.
+    </p>
+</div>
