--- a/Fiap.Web.WizardingWonders/Views/_ViewImports.cshtml
+++ b/Fiap.Web.WizardingWonders/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Fiap.Web.WizardingWonders
 @using Fiap.Web.WizardingWonders.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Fiap.Web.WizardingWonders
